# Catalog-crypto-api

./: README.md
catalog-crypto-api-master/: Cargo.toml
catalog-crypto-api-master/migrations/: 20241223095509_create_depth_history.sql  20241224043353_create_earning_history.sql  20241224053614_create_swap_history.sql  20241224060050_create_runepool_units_history.sql
catalog-crypto-api-master/src/: main.rs  swagger.rs
catalog-crypto-api-master/src/api/routes/: depth.rs  earnings.rs  mod.rs  runepool.rs  swap.rs
catalog-crypto-api-master/src/api/server/: depth_history.rs  earning_history.rs  fetch.rs  mod.rs  runepool_units_history.rs  swap_history.rs
catalog-crypto-api-master/src/config/: connect.rs
catalog-crypto-api-master/src/core/models/: common.rs  depth_history.rs  earnings_history.rs  mod.rs  runepool_units_history.rs  swap_history.rs
catalog-crypto-api-master/src/services/: client.rs  mod.rs  spawn.rs
catalog-crypto-api-master/src/services/jobs/cron/: depth_history_cron.rs  earnings_history_cron.rs  hourly_fetcher.rs  mod.rs  runepool_units_history_cron.rs  swap_history_cron.rs
catalog-crypto-api-master/src/services/repository/: depth.rs  earnings.rs  runepool.rs  swap.rs
